Fixed extra margin  below header.

--- a/app/assets/stylesheets/bootstrap/_breakingpoint.scss
+++ b/app/assets/stylesheets/bootstrap/_breakingpoint.scss
@@ -7,7 +7,7 @@
 }
 
 .site-header {
-	margin-bottom: 75px;
+	//margin-bottom: 75px;
 
 	.header-top {
 		background: url($cdnPath + "images/hsHeader.jpg") center top no-repeat;
